syntax = "proto3";

package services.auth;
option go_package = "github.com/galexrt/arpanet/proto/services/auth;auth";

import "resources/users/users.proto";
import "validate/validate.proto";

message LoginRequest {
  string username = 1 [(validate.rules).string = {min_len: 3, max_len: 24}];
  string password = 2 [(validate.rules).string.min_len = 6];
}

message LoginResponse {
  string token = 1;
}

message GetCharactersRequest {}

message GetCharactersResponse {
  repeated resources.users.User chars = 1;
}

message ChooseCharacterRequest {
  int32 char_id = 1 [(validate.rules).int32.gt = 0];
}

message ChooseCharacterResponse {
  string token = 1;
  repeated string permissions = 2;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetCharacters(GetCharactersRequest) returns (GetCharactersResponse);
  rpc ChooseCharacter(ChooseCharacterRequest) returns (ChooseCharacterResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}
